design/v1.0/deeptrace/10_接口设计.md
# deeptrace 静态库 - 接口设计(细化)

## 1. 数据结构细化

### Result 枚举
```cpp
enum class Result {
  Ok = 0, Error, InvalidArg, NotAttached, NoSuchProcess, AccessDenied,
  ReadFault, WriteFault, NotFound, Timeout, NotSupported, AlreadyExists,
  NotExecutable, BadFormat
};
```

### ValueType
```cpp
enum class ValueType { Byte, Word, Dword, Qword, Float, Double };
```

### ProcessInfo
```cpp
struct ProcessInfo {
  uint32_t pid = 0;
  std::wstring name;
  uint32_t parent_pid = 0;
  uint32_t thread_count = 0;
};
```

### MemoryRegion
```cpp
struct MemoryRegion {
  uintptr_t base = 0;
  size_t size = 0;
  uint32_t protection = 0;   // PAGE_* 值(数值,不暴露宏)
  uint32_t state = 0;
  uint32_t type = 0;
};
```

### ModuleInfo / ExportInfo / ThreadInfo / RegisterInfo
```cpp
struct ModuleInfo  { uintptr_t base = 0; size_t size = 0; std::wstring name; std::wstring path; };
struct ExportInfo  { std::string name; uintptr_t address = 0; };
struct ThreadInfo  { uint32_t tid = 0; int32_t priority = 0; uintptr_t start_address = 0; };
struct RegisterInfo{ std::string name; uint64_t value = 0; };
```

### BreakpointInfo
```cpp
enum class BreakpointType { Software, Hardware, PageGuard };
struct BreakpointInfo {
  uintptr_t address = 0;
  BreakpointType type = BreakpointType::Software;
  uint8_t original_byte = 0;
  int32_t hw_index = -1;      // DR0-DR3
};
```

### WatchEntry
```cpp
struct WatchEntry {
  uint32_t index = 0;
  std::string description;
  uintptr_t address = 0;
  ValueType type = ValueType::Dword;
  std::string value;          // 刷新后文本
  bool valid = false;
};
```

### Instruction
```cpp
struct Instruction {
  uintptr_t address = 0;
  std::vector<uint8_t> bytes;
  std::string text;           // 纯 ASCII 助记符文本
};
```

### DebugStatus
```cpp
struct DebugStatus {
  bool attached = false;
  uint32_t pid = 0;
  uint32_t breakpoint_count = 0;
  uint32_t hw_breakpoint_count = 0;
};
```

## 2. 关键算法设计

### AOB 匹配
- 输入:模式串(如 "48 8B ?? ?? 00"),通配符为 `??`(大小写不敏感)
- 纯函数:在字节流中查找所有匹配,返回偏移
- 解析失败(奇数长度/非法字符)→ BadFormat

### x64 解码器
- 纯函数:bytes(1-15) + 当前地址 → Instruction(text)
- 覆盖常用指令:mov/push/pop/call/jmp/jcc/ret/lea/add/sub/and/or/xor/cmp/test/
  nop/int3/int/syscall/inc/dec/imul/movzx/movsx/setcc/xchg/shift + REX.W/SIB/disp
- 无法解码 → text = "db <hex>"(数据字节)

### x64 编码器
- 纯函数:助记符文本 → bytes;与解码器覆盖同一指令子集
- 支持寄存器名 rax-r15/eax-r15d/ax-r15w/al-r15b/spl/bpl/sil/dil
- 立即数支持 0x 十六进制与十进制;相对跳转自动计算 rel8/rel32

### 状态文件格式
- 文本行格式,每行一个条目,字段以 `|` 分隔,值均为 ASCII
- breakpoints.dat:`addr|type|original_byte`
- watch.dat:`desc|addr|type`
- inject.dat:`kind|path_or_bytes|addr|tid`(kind=dll/shellcode)

## 3. 原子化接口示例

```cpp
// atomic/process.h (internal)
HANDLE OpenProcessById(uint32_t pid, DWORD access, deeptrace::Result* err);
// atomic/memory.h
size_t ReadMemory(HANDLE h, uintptr_t addr, void* buf, size_t size, deeptrace::Result* err);
size_t WriteMemory(HANDLE h, uintptr_t addr, const void* buf, size_t size, deeptrace::Result* err);
// atomic/thread.h
std::vector<ThreadInfo> EnumThreads(uint32_t pid, deeptrace::Result* err);
// atomic/debug.h
bool SetContextRegister(HANDLE thread, uint64_t value, ...);
```
